--- a/arbeidskrav1.ipynb
+++ b/arbeidskrav1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "dde60304-4976-48fb-9e4e-e473ef1c4c90",
    "metadata": {},
    "outputs": [
@@ -38,8 +38,8 @@
     "\n",
     "antall_km = 10000 \n",
     "#antall_km = int(input(\"Legg til antall km pr år: \"))\n",
-    "totale_kostnader_elbil = variabel(antall_km, elbil = True) #definerer variabel med 10000 og elbil\n",
-    "antall_kostnader_fossilbil = variabel(antall_km, elbil = False) #definerer varibel med 10000 km og ikke eilbil\n",
+    "totale_kostnader_elbil = funksjon(antall_km, elbil = True) #definerer variabel med 10000 og elbil\n",
+    "antall_kostnader_fossilbil = funksjon(antall_km, elbil = False) #definerer varibel med 10000 km og ikke eilbil\n",
     "\n",
     "print(f\"Årlige kostnader for elbil er kr: {totale_kostnader_elbil} og kr: {antall_kostnader_fossilbil} for fossilbil. Differansen er kr: {abs(totale_kostnader_elbil - antall_kostnader_fossilbil)}\")"
    ]
